--- a/styles/app.css
+++ b/styles/app.css
@@ -7,12 +7,16 @@
   font-family: 'Poppins',sans-serif;
   font-family: 'Roboto',sans-serif;
 */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400&display=swap');
 
 /* Globales */
+*{
+  box-sizing: border-box;
+}
 
 body{
   font-family: 'Poppins', sans-serif;
+  
   font-weight: 600;
 
   font-size: 16px;
@@ -29,9 +33,22 @@ img{
   max-width: 100%;
 }
 
+::-webkit-input-placeholder, ::placeholder {
+  font-family: 'Roboto';
+  font-size: 0.875rem;
+  line-height: 1rem;
+
+  color: #9DAFBD;
+}
 /* Utilidades */
 .container{
   width: 1104px; 
+  max-width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.container-m{
+  width: 750px;
   max-width: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -49,7 +66,9 @@ img{
   font-size: 2.125rem;
   line-height: 3.1875rem;
 }
-
+.font-bold{
+  font-weight: 700;
+}
 .text-s {
   font-size: 0.875rem;
 }
@@ -64,11 +83,50 @@ img{
 .top-space{
   margin-top: 1rem;
 }
+.top-space-md{
+  margin-top: 1.875rem;
+}
+.top-space-lg {
+  margin-top: 3.75rem;
+}
+
+.circle{
+  border-radius: 50%;
+}
+.text-secondary{
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.625rem;
+  color: rgba(18, 34, 80, 0.64);
+}
+
 .text-accent{
   color: #FF2EAB;
 }
 .text-center{
   text-align: center;
+}
+.bg-gradient{
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(201, 214, 250, 0.2));
+}
+.btn-main{
+  background: #366BFF;
+  box-shadow: 0px 10px 20px rgba(54, 107, 255, 0.2);
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 2.37rem;
+  padding-right: 2.37rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.31rem;
+  color:white;
+  border: 0;
+}
+.card{
+  background: #FFFFFF;
+  box-shadow: 0px 40px 80px rgba(0, 0, 0, 0.1);
+  padding: 30px 33px;
 }
 
 /* Componentes */
@@ -134,7 +192,7 @@ img{
 .benefits{
   padding-top: 96px;
   padding-bottom: 96px;
-  background: linear-gradient(rgba(255, 255, 255, 0), rgba(201, 214, 250, 0.2));
+  
 }
 
 .benefits h2{
@@ -177,8 +235,74 @@ img{
   align-items: center;
   justify-content: center;
   color: #9DAFBD;
-
+}
+.skill-title{
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+}
+.skill-text-secondary{
+  font-family: 'Roboto';
+}
+.quote{
+  margin-top: 96px;
+  margin-bottom: 96px;
 }
 
+.quote .main-text{
+  font-weight: 400;
+  line-height: 2.875rem;
+
+  color: #366BFF;
+}
+.contact-section{
+  padding-top: 96px;
+  padding-bottom: 96px;
+
+}
+.contact-section .container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: min(5vw, 95px);
+  align-items: center;
+}
+.contact-section .address{
+  flex: 1;
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+}
+.contact-section .address .main-text{
+  color: #366BFF;
+}
+.input-field{
+  background: #F7F9FA;
+  border: 1px solid #D1DBE3;
+  padding: 1rem;
+  display: block;
+  font-family: 'Roboto';
+  font-weight: 300;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
+  width: 100%;
+  /* color: #9DAFBD; */
+}
+.input-field input{
+  display: block;
+  border: none;
+  background: transparent;
+  width:100%;
+  /* outline: 0; */
+}
+textarea.input-field{
+  min-height: 180px;
+}
+.contact-section form.card{
+  width: min(450px, 100%);
+}
+.social-media{
+  display: flex;
+  gap: 10px;
+}
 /* rem -> Unidad relativa a la fuente raiz, el tamaño de un caracter de la fuente raiz */
 /* em -> Fuente actual */
